# Sladkaya_Kiska

./: .gitignore  CMakeLists.txt
lab1/: CMakeLists.txt
lab1/task1/: CMakeLists.txt
lab1/task1/src_exe/: CMakeLists.txt  task1.c
lab1/task2/: CMakeLists.txt
lab1/task2/src_exe/: CMakeLists.txt  task2.c
lab1/task3/: CMakeLists.txt
lab1/task3/src_exe/: CMakeLists.txt  task3.c
lab1/task4/: CMakeLists.txt
lab1/task4/src_exe/: CMakeLists.txt  task4.c
lab1/task5/: CMakeLists.txt
lab1/task6/: CMakeLists.txt
lab1/task7/: CMakeLists.txt
lab1/task8/: CMakeLists.txt
lab2/: CMakeLists.txt
lab2/includes/: head.h
lab2/src_exe/: CMakeLists.txt  main.c
lab2/src_lib/: CMakeLists.txt  task1_ar.c  task2_f.c
lab3/: CMakeLists.txt
lab3/includes/: head.h
lab3/src_exe/: CMakeLists.txt  main.c
lab3/src_lib_dowhile/: CMakeLists.txt  findFirstElement.c  findFirstNegativeElement.c  print.c  summ.c  summ2.c
lab3/src_lib_for/: CMakeLists.txt  findFirstElement.c  findFirstNegativeElement.c  func.c  print.c  summ.c  summ2.c
lab3/src_lib_while/: CMakeLists.txt  findFirstElement.c  findFirstNegativeElement.c  print.c  summ.c  summ2.c
lab4/: CMakeLists.txt
lab4/task1/: CMakeLists.txt
lab4/task2/: CMakeLists.txt
lab5/: CMakeLists.txt
lab5/includes/: head.h
lab5/src_exe/: CMakeLists.txt  main.c
lab5/src_lib/: CMakeLists.txt  delete.c  insert.c  strcat.c  strcpy.c  strlen.c
lab6/src_exe/: main.c
lab7/: CMakeLists.txt
lab7/task[1]/: CMakeLists.txt
lab7/task[2]/: CMakeLists.txt
lab7/task[3-6]/: CMakeLists.txt
lab7/task[7]/: CMakeLists.txt
(+32 files in other folders)
